# agentic-takim

./: .dockerignore  .editorconfig  .env.example  .gitignore  .tool-versions  ACP.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  STACK.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.opencode/plans/: v0.9.1_PLAN.md
apps/web/: Dockerfile  next-env.d.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  ui.tsx
apps/web/app/components/: app-shell.tsx  providers.tsx  sidebar.tsx  status-badge.tsx
apps/web/app/components/ui/: badge.tsx  button.tsx  card.tsx  skeleton.tsx  table.tsx  theme-toggle.tsx
apps/web/app/lib/: api.ts  utils.ts
apps/web/app/memory/: page.tsx
apps/web/app/observer/: page.tsx
apps/web/app/tasks/: page.tsx
apps/web/app/tasks/[id]/: _artifacts.tsx  _builds.tsx  _dag.tsx  _timeline.tsx  page.tsx
apps/web/app/tools/: page.tsx
config/: agents.json  tools.json
config/stacks/nextjs-prisma-sqlite/: _meta.json  package.json.tmpl  tsconfig.json
config/stacks/nextjs-prisma-sqlite/app/: globals.css  layout.tsx
config/stacks/nextjs-prisma-sqlite/lib/: prisma.ts
config/stacks/nextjs-prisma-sqlite/prisma/: schema.prisma.base
docs/adr/: ADR-001-stack-choice.md  ADR-002-acp-design.md  ADR-003-memory-strategy.md
infra/compose/: docker-compose.yml
infra/litellm/: litellm_config.yaml
infra/otel/: otel-collector-config.yaml
infra/postgres/: init.sql
scripts/: assemble_repo.py  bootstrap.sh  build_validator.py  export_artifacts.py  init-nats.sh  init-qdrant.sh  verify_real_agents.sh  wait-for.sh
services/agent-runner/: Dockerfile  pyproject.toml
services/agent-runner/runner/: consumer.py  graph.py  llm.py  main.py  prompts.py  resume_demo.py
services/builder/: Dockerfile  pyproject.toml
services/builder/builder/: __init__.py  api.py  assembler.py  db.py  snapshot.py  validator.py
services/control-plane/: Dockerfile  pyproject.toml
services/control-plane/app/: bus.py  config.py  context_reducer.py  db.py  main.py  memory.py  models.py  orchestrator.py  planner.py  routing.py  schema_validator.py  seed.py  validate.py
services/control-plane/migrations/: env.py
services/control-plane/migrations/versions/: 0001_init_registry.py  0002_tasks.py  0003_task_nodes.py  0004_hitl.py  0005_retry_failure.py  0006_collaboration.py  0007_refinement.py  0008_memory.py  0009_tools.py  0010_tool_safety.py  0011_adapter_layer.py  0012_builds.py  0013_build_runs.py  0014_memory_consolidation.py
services/control-plane/tests/: test_v091.py
services/observer/: Dockerfile  pyproject.toml
services/observer/observer/: __init__.py  aggregator.py  api.py  cache.py  clusterer.py  db.py  recommender.py  scorer.py
services/preview/: Dockerfile  pyproject.toml
services/preview/preview/: __init__.py  api.py  manager.py
services/sandbox/: Dockerfile  pyproject.toml
services/sandbox/sandbox/: __init__.py  api.py  errors.py  runner.py
services/tool-runtime/: Dockerfile  pyproject.toml
services/tool-runtime/toolrt/: adapter.py  api.py  circuit_breaker.py  compensator.py  db.py  main.py  rate_limiter.py  schema_validator.py  secrets.py  tools.py
services/tool-runtime/toolrt/adapters/: __init__.py  erp.py  simulated.py  whatsapp.py
services/worker/: Dockerfile  pyproject.toml
services/worker/worker/: main.py
