[project]
name = "agentic-agent-runner"
version = "0.1.0"
description = "LangGraph ajan yürütücü — durable execution (AsyncPostgresSaver)."
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.50,<0.3",
  "langgraph-checkpoint-postgres>=2.0,<3",
  "psycopg[binary,pool]>=3.2,<4",
  "nats-py>=2.9,<3",
  "agentic-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]
