[project]
name = "agentic-builder"
version = "2.1.0"
description = "Builder — artifact → doğrulanmış repo (assemble + validate + persist). v2.1 Workspace Runtime."
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.30,<0.31",
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "httpx>=0.27,<0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["builder"]
