[project]
name = "agentic-control-plane"
version = "0.1.0"
description = "Kaptan'ın control plane'i — routing/orkestrasyon API (FastAPI)."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.30,<0.31",
  "alembic>=1.14,<1.15",
  "pydantic-settings>=2.6,<3",
  "httpx>=0.27,<0.28",
  "nats-py>=2.9,<3",
  "agentic-schemas",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
