[project]
name = "agentic-observer"
version = "1.3.0"
description = "Observer — post-hoc analytics plane: KPI/score/cluster/recommendation (v1.3). Read-only."
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.30,<0.31",
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["observer"]
