[project]
name = "agentic-preview"
version = "2.3.0"
description = "Preview — Live Preview (npm run dev, tek-slot canlı dev server). Stateless/in-memory. v2.3."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["preview"]
