[project]
name = "agentic-sandbox"
version = "2.2.0"
description = "Sandbox — Build Execution Layer (npm install/prisma/build, structured errors). Stateless. v2.2."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "anyio>=4,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sandbox"]
