[project]
name = "agentic-tool-runtime"
version = "0.1.0"
description = "Tool Runtime — dış sistem çağrılarını izole/idempotent/izinli çalıştırır (v0.9)."
requires-python = ">=3.12"
dependencies = [
  "nats-py>=2.9,<3",
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.30,<0.31",
  "agentic-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toolrt"]
