[project]
name = "agentic-worker"
version = "0.1.0"
description = "Arka plan worker — tool/embedding/background işleri NATS'tan tüketir."
requires-python = ">=3.12"
dependencies = [
  "nats-py>=2.9,<3",
  "agentic-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
